--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,7 @@ dev = [
     "pytest>=8.4.1",
     "pytest-cov>=6.2.1",
 ]
+
+[tool.setuptools]
+# Explicitly specify which directories are packages
+packages = ["UNITO_Train_Predict", "UNITO_Predict", "UNITO_User_Interface"]
