--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
     "torch>=2.7.1",
     "torchvision>=0.22.1",
     "tqdm>=4.67.1",
-    "datashader=0.18.0"
+    "datashader>=0.18.0"
 ]
 
 [dependency-groups]
